<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WOW</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Cancel">Cancel</string>

    <string name="noconnection">No Connection</string>
    <string name="ncmsg">Seems like there is a problem with \n your internet connection</string>
    <string name="nctry">Try Again</string>
    <string name="nonetwork">No internet available</string>
    <string name="prefrence_file_name">allPreference</string>
    <string name="press_again_exit_app">Press again to exit from the app</string>

    <string name="amount_100">+ \u20B9 100</string>
    <string name="amount_200">+ \u20B9 200</string>
    <string name="amount_500">+ \u20B9 500</string>
    <string name="amount_1000">+ \u20B9 1000</string>
    <string name="add_money_from">Add money from</string>


    <string-array name="array_name">
        <item>Select Location</item>
        <item>Location1</item>
        <item>Location12</item>
    </string-array>

    <string name="Rs">\u20B9</string>

    <string-array name="array_address">
        <item>Time Slot </item>
        <item>Address1</item>
        <item>Address2</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_id">359128091179537</string>

</resources>
